fix tf-idf and save to file, fix BoW to save to file

--- a/Python Scripts/Data Analysis.ipynb
+++ b/Python Scripts/Data Analysis.ipynb
@@ -256,7 +256,135 @@
       "\n",
       "Top 15 terms in document 13 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\02_functions-and-limits\\05_working-with-limits\\01_what-is-the-limit-of-a-product.en_FullLemTerm.txt\n",
       "\n",
-      "Top 15 terms in document 14 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\02_functions-and-limits\\05_working-with-limits\\02_what-is-the-limit-of-a-quotient.en_FullLemTerm.txt\n"
+      "Top 15 terms in document 14 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\02_functions-and-limits\\05_working-with-limits\\02_what-is-the-limit-of-a-quotient.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 15 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\02_functions-and-limits\\06_limits-in-motion\\01_how-fast-does-a-ball-move.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 16 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\01_introduction\\01_what-else-is-there-to-study-about-functions-and-limits.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 17 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\02_continuity\\01_what-is-a-one-sided-limit.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 18 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\02_continuity\\02_what-does-continuous-mean.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 19 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\02_continuity\\03_what-is-the-intermediate-value-theorem.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 20 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\02_continuity\\04_how-can-i-approximate-root-two.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 21 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\03_infinity-how-can-i-work-with-that\\01_why-is-there-an-x-so-that-f-x-x.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 22 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\03_infinity-how-can-i-work-with-that\\02_what-does-lim-f-x-infinity-mean.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 23 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\03_infinity-how-can-i-work-with-that\\03_what-is-the-limit-f-x-as-x-approaches-infinity.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 24 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\03_infinity-how-can-i-work-with-that\\04_why-is-infinity-not-a-number.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 25 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\04_slope\\01_what-is-the-difference-between-potential-and-actual-infinity.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 26 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\04_slope\\02_what-is-the-slope-of-a-staircase.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 27 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\04_slope\\03_how-fast-does-water-drip-from-a-faucet.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 28 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\05_bonus-videos\\01_what-is-the-official-definition-of-limit.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 29 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\05_bonus-videos\\02_why-is-the-limit-of-x-2-as-x-approaches-2-equal-to-4.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 30 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\03_the-end-of-limits\\05_bonus-videos\\03_why-is-the-limit-of-2x-as-x-approaches-10-equal-to-20.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 31 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\01_introduction\\01_what-comes-next-derivatives.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 32 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\02_what-are-derivatives\\01_what-is-the-definition-of-derivative.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 33 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\02_what-are-derivatives\\02_what-is-a-tangent-line.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 34 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\02_what-are-derivatives\\03_why-is-the-absolute-value-function-not-differentiable.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 35 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\02_what-are-derivatives\\04_how-does-wiggling-x-affect-f-x.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 36 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\03_why-would-i-care-to-find-the-derivative\\01_why-is-sqrt-9999-so-close-to-99-995.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 37 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\03_why-would-i-care-to-find-the-derivative\\02_what-information-is-recorded-in-the-sign-of-the-derivative.en_FullLemTerm.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 15 terms in document 38 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\04_how-do-differentiability-and-continuity-relate\\01_why-is-a-differentiable-function-necessarily-continuous.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 39 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\04_how-do-differentiability-and-continuity-relate\\02_what-is-the-derivative-of-a-constant-multiple-of-f-x.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 40 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\05_how-do-i-find-the-derivative\\01_why-is-the-derivative-of-x-2-equal-to-2x.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 41 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\05_how-do-i-find-the-derivative\\02_what-is-the-derivative-of-x-n.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 42 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\05_how-do-i-find-the-derivative\\03_what-is-the-derivative-of-x-3-x-2.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 43 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\04_the-beginning-of-derivatives\\05_how-do-i-find-the-derivative\\04_why-is-the-derivative-of-a-sum-the-sum-of-derivatives.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 44 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\01_introduction\\01_how-do-we-compute-derivatives.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 45 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\02_how-do-i-differentiate-a-product\\01_what-is-the-derivative-of-f-x-g-x.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 46 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\02_how-do-i-differentiate-a-product\\02_morally-why-is-the-product-rule-true.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 47 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\02_how-do-i-differentiate-a-product\\03_how-does-one-justify-the-product-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 48 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\03_how-do-i-differentiate-a-quotient\\01_what-is-the-quotient-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 49 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\03_how-do-i-differentiate-a-quotient\\02_how-can-i-remember-the-quotient-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 50 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\04_higher-derivatives\\01_what-is-the-meaning-of-the-derivative-of-the-derivative.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 51 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\04_higher-derivatives\\02_what-does-the-sign-of-the-second-derivative-encode.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 52 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\04_higher-derivatives\\03_what-does-d-dx-mean-by-itself.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 53 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\05_how-do-i-sketch-a-graph-without-a-computer\\01_what-are-extreme-values.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 54 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\05_how-do-i-sketch-a-graph-without-a-computer\\02_how-can-i-find-extreme-values.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 55 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\05_how-do-i-sketch-a-graph-without-a-computer\\03_do-all-local-minimums-look-basically-the-same-when-you-zoom-in.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 56 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\05_how-do-i-sketch-a-graph-without-a-computer\\04_how-can-i-sketch-a-graph-by-hand.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 57 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\05_techniques-of-differentiation\\06_how-do-i-differentiate-e-x\\01_what-is-a-function-which-is-its-own-derivative.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 58 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\01_intro\\01_is-there-anything-more-to-learn-about-derivatives.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 59 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\02_what-is-the-chain-rule\\01_what-is-the-chain-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 60 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\02_what-is-the-chain-rule\\02_what-is-the-derivative-of-1-2x-5-and-sqrt-x-2-0-0001.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 61 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\03_how-do-i-find-the-tangent-line-to-a-curve\\01_what-is-implicit-differentiation.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 62 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\03_how-do-i-find-the-tangent-line-to-a-curve\\02_what-is-the-folium-of-descartes.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 63 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\04_how-do-i-find-the-derivative-of-an-inverse-function\\02_what-is-the-derivative-of-log.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 64 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\04_how-do-i-find-the-derivative-of-an-inverse-function\\03_what-is-logarithmic-differentiation.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 65 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\05_how-can-i-multiply-quickly\\01_how-can-we-multiply-quickly.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 66 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\06_how-do-i-justify-the-derivative-rules\\01_how-do-we-justify-the-power-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 67 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\06_how-do-i-justify-the-derivative-rules\\02_how-can-logarithms-help-to-prove-the-product-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 68 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\06_how-do-i-justify-the-derivative-rules\\03_how-do-we-prove-the-quotient-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 69 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\06_chain-rule\\06_how-do-i-justify-the-derivative-rules\\04_bonus-how-does-one-prove-the-chain-rule.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 70 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\07_derivatives-of-transcendental-trigonometric-functions\\01_introduction\\01_what-are-derivatives-of-transcendental-functions.en_FullLemTerm.txt\n",
+      "\n",
+      "Top 15 terms in document 71 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\07_derivatives-of-transcendental-trigonometric-functions\\02_what-is-trigonometry\\01_what-are-transcendental-functions.en_FullLemTerm.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Top 15 terms in document 72 | C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\calculus1\\07_derivatives-of-transcendental-trigonometric-functions\\02_what-is-trigonometry\\02_why-does-trigonometry-work.en_FullLemTerm.txt\n"
      ]
     }
    ],
