--- a/Python Scripts/Data Analysis.ipynb
+++ b/Python Scripts/Data Analysis.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,8 @@
     "import pprint\n",
     "from tabulate import tabulate\n",
     "import unittest\n",
+    "import collections\n",
+    "import re\n",
     "\n",
     "import scipy\n",
     "import numpy\n",
@@ -198,8 +200,7 @@
     "                    fcontentTBlob = tb(curFile.read())\n",
     "                    #print(fcontentTBlob)\n",
     "                    doclist.append(fcontentTBlob)\n",
-    "                    # bag of words processing:\n",
-    "                    \n",
+    "                                        \n",
     "                finally: \n",
     "                    curFile.close()\n",
     "            else:\n",
@@ -299,7 +300,7 @@
     "    data_corpus = []  \n",
     "    \n",
     "    if iFilePath.endswith(\"_lemmatized.txt\"):\n",
-    "        print(\"[Bag of words: ]\\t\" + iFilePath+\"\\n\")\n",
+    "        print(\"[Bag of words: ]\\t\" + iFilePath)\n",
     "\n",
     "        baseName = iFilePath.split(\".en\", 1)[0]\n",
     "        OFName = baseName + \".en_FullLemTerm.txt\" \n",
@@ -395,7 +396,8 @@
     "        iPOSFile.close()\n",
     "        \n",
     "    if res == \"\":\n",
-    "        res = \"NOT FOUND: \"+lemmaIn\n",
+    "        #res = \"NOT FOUND: \"+lemmaIn\n",
+    "        res = \"\"\n",
     "        \n",
     "    return res"
    ]
@@ -468,7 +470,7 @@
     "                    POSfilePath = baseName+\".en_stemmedbyPOS.txt\"\n",
     "\n",
     "                    if os.path.basename(POSfilePath) in POSfiles:\n",
-    "                        print(\"\\n\\n[POS file for BoW: ]\\t\" + POSfilePath)\n",
+    "                        print(\"\\n[POS file for BoW: ]\\t\" + POSfilePath)\n",
     "                        \n",
     "                        # ---------- bag of words processing: ------------\n",
     "                        # <Get lemmatized file, look for the 1st lemma in the respective POS file and take the full term>\n",
@@ -498,22 +500,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import collections, re\n",
-    "texts = ['John likes to watch movies. Mary likes too.',\n",
-    "'John also likes to watch football games.']\n",
+    "def BoW_v2(curFile,oFilePath,textCorpus):\n",
+    "    #oFileName = curFile.\n",
+    "    \n",
+    "    words = re.findall(r'\\w+', textCorpus)\n",
+    "    res = collections.Counter(words).most_common(50)\n",
+    "    \n",
+    "    with open(oFilePath,\"w\") as oFile:\n",
+    "        for tpl in res:\n",
+    "            final = str(tpl[0])+\",\"+str(tpl[1])\n",
+    "            #print(final)\n",
+    "            oFile.write(final+\"\\n\")\n",
     "\n",
-    "bagsofwords = [collections.Counter(re.findall(r'\\w+', txt)) for txt in texts]\n",
     "\n",
-    "bagsofwords[0]\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\mobile-robot\\02_mobile-robots\\01_week-2\"\n",
     "\n",
-    "#Counter({'likes': 2, 'watch': 1, 'Mary': 1, 'movies': 1, 'John': 1, 'to': 1, 'too': 1})\n",
+    "# --- Collecting the POS files\n",
+    "for root, subdirs, files in os.walk(path):\n",
     "\n",
-    "bagsofwords[1]\n",
-    "#Counter({'watch': 1, 'games': 1, 'to': 1, 'likes': 1, 'also': 1, 'John': 1, 'football': 1})\n",
+    "    for curFile in os.listdir(root):\n",
     "\n",
-    "sumbags = sum(bagsofwords, collections.Counter())\n",
+    "        curFilePath = os.path.join(root, curFile)\n",
     "\n",
-    "Counter({'likes': 3, 'watch': 2, 'John': 2, 'to': 2, 'games': 1, 'football': 1, 'Mary': 1, 'movies': 1, 'also': 1, 'too': 1})\n"
+    "        if os.path.isdir(curFilePath):\n",
+    "            pass\n",
+    "\n",
+    "        else:\n",
+    "            # create a list of files for POS so that it can be sent along with BoF to look for the right file and terms\n",
+    "            if curFilePath.endswith(\"_FullLemTerm.txt\"):\n",
+    "                curFile = open(curFilePath, 'r', encoding = \"ISO-8859-1\") #IMPORTANT ENCODING! UTF8 DOESN'T WORK\n",
+    "                oFilePath = str(curFilePath.split(\".en\")[0])+\".en_BoWv2Top50.txt\"\n",
+    "                print(oFilePath)\n",
+    "                textCorpus = \"\"\n",
+    "                \n",
+    "                fcontent = curFile.read().split()\n",
+    "                for word in fcontent:\n",
+    "                    #print(word)\n",
+    "                    textCorpus += word+\" \"\n",
+    "                    \n",
+    "                ## Now, having the text corpus, process with Bag of Words v.2\n",
+    "                BoW_v2(curFile,oFilePath,textCorpus)\n",
+    "                                \n",
+    "            else:\n",
+    "                pass\n",
+    "            \n",
+    "#print(textCorpus,\"\\n\\n\")"
    ]
   },
   {
