searching for title keywords within the text + mapping n-gram search to real files

--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "whitelistSW = ['a', 'an', 'between', 'few', 'here', 'i', 'if', 'in', 'is', 'it', 'so', 'that', \n",
     "                'there', 'this', 'to', 'until', 'we', 'while', 'you']\n",
     "\n",
-    "tinySWList = ['we','that','now','you','in','the','is','and']\n",
+    "tinySWList = ['we','that','now','you','in','the','is','and','to']\n",
     "\n",
     "#stopWords = stopwords.words('english')\n",
     "#print(stopWords)"
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
     "        print(\"[Removing StopWords: ] \" + os.path.basename(iFile.name))\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
     "        # print(\"BASE NAME: \", baseName)\n",
-    "        OFName = baseName + \".en_sentNoPunctNoSWAll.txt\"\n",
+    "        OFName = baseName + \".en_sentNoPunctNoSWTiny.txt\"\n",
     "        \n",
     "        sentList = iFile.read().split('\\n')\n",
     "        \n",
@@ -299,7 +299,7 @@
     "                for sent in sentList:\n",
     "                    wordList = sent.split()\n",
     "                    for word in wordList:\n",
-    "                        if word in fullSWList:\n",
+    "                        if word in tinySWList:\n",
     "                            # if token is a stop word, don't save in the output (skip)\n",
     "                            pass\n",
     "                        else:\n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -438,9 +438,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Lemmatizing: ] 01_behaviors-revisited.en_stemmedbyPOS.txt\n",
+      "[Removing StopWords: ] 01_behaviors-revisited.en_sentNoPunct.txt\n",
       "\n",
-      "Total number of 13 TXT files found.\n"
+      "Total number of 15 TXT files found.\n"
      ]
     }
    ],
