playing with the notebook file

--- a/Python Scripts/Dictionary and N-Grams.ipynb
+++ b/Python Scripts/Dictionary and N-Grams.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Plan of action\n",
     "- grab sentence by sentence file\n",
@@ -23,6 +25,7 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -73,6 +76,7 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -101,6 +105,7 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -136,7 +141,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### Trying to find n-grams in the dictionary\n",
     "\n",
@@ -150,6 +157,7 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -245,6 +253,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [],
@@ -329,9 +338,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "### Extracting N-Grams and matching title keywords to real files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def title_extrKeys(curFilePath):\n",
@@ -366,7 +386,9 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "name": "stdout",
