playing with the notebook file

--- a/Python Scripts/Dictionary and N-Grams.ipynb
+++ b/Python Scripts/Dictionary and N-Grams.ipynb
@@ -6,7 +6,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Plan of action\n",
+    "## Plan of action\n",
     "- grab sentence by sentence file\n",
     "- split each sentence in n-grams (1-2-3-4)\n",
     "- compare n-grams with dictionary\n",
@@ -19,6 +19,16 @@
     "\n",
     "Test data will be 2-3 more courses I will find in sourcera and split the same way as my current data, \n",
     "will learn a classifier with it and try to classify them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Dictionary terms for my 5 classes"
    ]
   },
   {
@@ -73,6 +83,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Import all modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
@@ -99,6 +119,16 @@
     "import inflect\n",
     "from bs4 import BeautifulSoup\n",
     "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Playground"
    ]
   },
   {
@@ -145,12 +175,22 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Trying to find n-grams in the dictionary\n",
+    "## Trying to find n-grams in the dictionary\n",
     "\n",
     "- Very unsure with monograms - lots of matches with simple stopwords, some of them make sense, but very few.\n",
     "- Very little found with trigrams, but if found - it's good\n",
     "- Bigrams should work good, but not too good\n",
     "- Tetragrams give no result whatsoever, also because there are very few items in the dictionaries that have 4 words to match with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "#### Dummy text to play with"
    ]
   },
   {
@@ -250,6 +290,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## N-GRAM IMPLEMENTATION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -325,7 +374,7 @@
     "    print(\"\\n_____________________________________________________________________\\n\")\n",
     "    find_grams_inDict1(gramsList3,sentenceList)\n",
     "\n",
-    "\n",
+    "\"\"\"\n",
     "sentences = textnoSW.split(\"\\n\")\n",
     "MonoGrams = get_ngrams(textnoSW,1)\n",
     "BiGrams = get_ngrams(textnoSW,2)\n",
@@ -334,7 +383,8 @@
     "\n",
     "#find_grams_inDict1(MonoGrams, sentences)\n",
     "find_grams_inDict2(BiGrams, TriGrams, sentences)\n",
-    "#find_grams_inDict3(MonoGrams, BiGrams, TriGrams, sentences)"
+    "#find_grams_inDict3(MonoGrams, BiGrams, TriGrams, sentences)\n",
+    "\"\"\""
    ]
   },
   {
@@ -343,7 +393,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "### Extracting N-Grams and matching title keywords to real files"
+    "## Extracting N-Grams and matching title keywords to real files"
    ]
   },
   {
