planning next steps

--- a/Python Scripts/Dictionary and N-Grams.ipynb
+++ b/Python Scripts/Dictionary and N-Grams.ipynb
@@ -20,11 +20,12 @@
     "Test data will be 2-3 more courses I will find in sourcera and split the same way as my current data, \n",
     "will learn a classifier with it and try to classify them\n",
     "\n",
-    "#### Whats and Whys\n",
+    "### Whats and Whys\n",
     "- ***Overall goal***: to create a labeled training set, but not by evaluating it manually more than selecting terms to look for\n",
     "- ***N-gram extraction***: To help find the dictionary terms\n",
     "- ***Keywords extraction from title***: to help figure out the main topic of the LO\n",
     "\n",
+    "##### Next steps\n",
     "* After finding and matching the n-grams as per sentences, I will add the respective label to the end of the sentence with a comma before. \n",
     "* Then will split each sentence by these commas and save into a list. \n",
     "* Then if a sentence has one item in the list, i.e. only sentence, that means it will have no label. If it has 2 elements in the list, that means it has one label if it has 3 elements - 2 labels etc. \n",
