pre-processed files again with enhancements and implementing sentence labeling

--- a/Python Scripts/FullPreprocessing.ipynb
+++ b/Python Scripts/FullPreprocessing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
     "        print(\"[Removing punctuation from file: ] \" + os.path.basename(iFile.name))\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
     "        # print(\"BASE NAME: \", baseName)\n",
-    "        OFName = baseName + \".en_sentNoPunct.txt\"\n",
+    "        OFName = baseName + \".en_sentNoPunctWithCommDot.txt\"\n",
     "        \n",
     "        try:\n",
     "            with open(OFName, \"w\") as oFile:\n",
@@ -245,13 +245,19 @@
     "                    sentToTok = word_tokenize(sent)\n",
     "                    #print(sentToTok)\n",
     "                    for tok in sentToTok:\n",
-    "                        UNallowedPunct = {\",\", \".\", \"[\", \"]\", \"=\", \"*\", \"/\", \"+\", \n",
+    "                        # full punct removal list\n",
+    "                        UNallowedPunct = {\"[\", \"]\", \"=\", \"*\", \"/\", \"+\", \n",
     "                                          \"-\", \"%\", \"#\", \"?\", \"(\", \")\", \"-\", \"_\", \n",
     "                                          \";\", \":\", \"'\", \"\\\"\", \"^\", \"`\"}.union(string.ascii_lowercase)\n",
-    "                        if tok in UNallowedPunct:\n",
-    "                            pass\n",
-    "                        else:\n",
-    "                            oFile.write(tok+\" \")\n",
+    "                        #if tok in UNallowedPunctSM:  #1\n",
+    "                        if tok in allowedPunct:    #2\n",
+    "                            oFile.write(tok+\"  \")   #2\n",
+    "                            #pass  #1\n",
+    "                        elif tok in UNallowedPunct:\n",
+    "                            #oFile.write(tok+\" \")   #1\n",
+    "                            pass    #2\n",
+    "                        else: \n",
+    "                            oFile.write(tok+\" \")   #2\n",
     "                    oFile.write(\"\\n\")\n",
     "        except FileNotFoundError:\n",
     "            print(\"CANNOT PROCESS (FileNotFoundError): \" + curFile.name)\n",
@@ -284,13 +290,41 @@
     "    else:\n",
     "        pass\n",
     "    \n",
+    "def stripMultiSpace(iFile):\n",
+    "    if iFile.name.endswith(\"_sentNoPunctWithCommDot.txt\"):\n",
+    "        print(\"[Removing StopWords: ] \" + os.path.basename(iFile.name))\n",
+    "        \n",
+    "        baseName = iFile.name.split(\".en\", 1)[0]\n",
+    "        OFName = baseName + \".en_sentNoPunctEnhanced.txt\"\n",
+    "        \n",
+    "        doubleSpaceCommaPattern = r'\\s,\\s'\n",
+    "        singleSpaceBothSidesCommaPat = r'(\\s\\,\\s)'\n",
+    "        apostrophePat = r'\\s\\''\n",
+    "        finalDotPat = r'\\s\\.'\n",
+    "        doubleSpacePat = r'\\s\\s'\n",
+    "        \n",
+    "        content = iFile.read().split(\"\\n\")\n",
+    "        \n",
+    "        with open(OFName, \"w\") as oFile:\n",
+    "            for item in content:\n",
+    "                #print(\"BEFORE: \",item)\n",
+    "                item = re.sub(doubleSpaceCommaPattern, \",\", item)\n",
+    "                item = re.sub(singleSpaceBothSidesCommaPat, \",\", item)\n",
+    "                item = re.sub(apostrophePat, \"'\", item)\n",
+    "                item = re.sub(finalDotPat, \".\", item)\n",
+    "                item = re.sub(doubleSpacePat, \" \", item)\n",
+    "                oFile.write(item+\"\\n\")\n",
+    "                #print(\"AFTER: \",item)\n",
+    "    else:\n",
+    "        pass\n",
+    "    \n",
     "    \n",
     "def rmSWSent(iFile, oPathNoExt):\n",
-    "    if iFile.name.endswith(\"_sentNoPunct.txt\"):\n",
+    "    if iFile.name.endswith(\"_sentNoPunctEnhanced.txt\"):\n",
     "        print(\"[Removing StopWords: ] \" + os.path.basename(iFile.name))\n",
     "        baseName = oPathNoExt.split(\".en\", 1)[0]\n",
     "        # print(\"BASE NAME: \", baseName)\n",
-    "        OFName = baseName + \".en_sentNoPunctNoSWTiny.txt\"\n",
+    "        OFName = baseName + \".en_sentNoPunctEnchancedNoSWTiny.txt\"\n",
     "        \n",
     "        sentList = iFile.read().split('\\n')\n",
     "        \n",
@@ -314,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,31 +458,30 @@
     "                #print(word+\" | \"+stem+\" | \"+lemma+\" | \"+lemmaPOS)\n",
     "                oFile.write(lemmaPOS+\"\\n\")\n",
     "            \n",
-    "            oFile.close()"
+    "            oFile.close()\n",
+    "            \n",
+    "def cleanup(iFile, oPathNoExt):\n",
+    "    if iFile.name.endswith(\"_sentNoPunctWithCommDot.txt\"):\n",
+    "        if('.en' not in iFile.name):\n",
+    "            try:\n",
+    "                print(\"DELETING FILE: \",iFile.name)\n",
+    "                os.remove(iFile.name)\n",
+    "            except PermissionError as err:\n",
+    "                print(\"SKIPPING: (FileInUse)\",err,\"\\n\")\n",
+    "                pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Removing StopWords: ] 01_behaviors-revisited.en_sentNoPunct.txt\n",
-      "\n",
-      "Total number of 15 TXT files found.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ----------------------------------------------- MAIN PROGRAM  -------------------------------------------------------\n",
     "\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\one file\"\n",
-    "\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\"\n",
     "counter = 0\n",
     "\n",
     "for root, subdirs, files in os.walk(path):\n",
@@ -488,6 +521,9 @@
     "                        rmStopWords()\t\t>>\t_tokens.txt\n",
     "                        stem()\t\t\t\t>>\t_tokPOStag.txt\n",
     "                        lemmatize()\t\t\t>>\t_stemmed.txt\n",
+    "                        rmPunctuationSent()\t>>\t_sent.txt\n",
+    "                        stripMultiSpace\t\t>>\t_sentNoPunctWithCommDot\n",
+    "                        rmSWSent \t\t\t>>\t_sentNoPunctEnhanced\n",
     "                        \"\"\"  \n",
     "                        #splitSentences(curFile, fileExtRemoved)\n",
     "                        #sentTokenize(curFile, fileExtRemoved)\n",
@@ -496,7 +532,11 @@
     "                        #stem(curFile, fileExtRemoved)\n",
     "                        #lemmatize(curFile, fileExtRemoved)\n",
     "                        #rmPunctuationSent(curFile, fileExtRemoved)\n",
+    "                        #stripMultiSpace(curFile)\n",
     "                        #rmSWSent(curFile, fileExtRemoved)\n",
+    "\n",
+    "                        curFile.close()\n",
+    "                        #cleanup(curFile, fileExtRemoved)\n",
     "                        \n",
     "                    except UnicodeEncodeError:\n",
     "                        print(\"CANNOT PROCESS (Encoding err): \" + curFile.name)\n",
