--- a/Python Scripts/Data Analysis.ipynb
+++ b/Python Scripts/Data Analysis.ipynb
@@ -22,7 +22,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Data analysis\n",
     "\n",
@@ -56,9 +58,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Running order & Library Import\n",
+    "First run all cells, \n",
+    "\n",
+    "then run Bag of Words v.1, \n",
+    "\n",
+    "finally run TF-IDF (takes around 15 min if only this is running, otherwise it takes around 45min)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -92,7 +111,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## TF-IDF implementation\n",
     "#### ---------------\n",
@@ -114,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# blob is the the text where to look for the word\n",
@@ -134,7 +157,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Running TF-IDF with data\n",
     "\n",
@@ -144,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# traverse each folder and sub-folder\n",
@@ -159,8 +187,8 @@
     "\n",
     "# WINDOWS\n",
     "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\one file\"\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\one file\"\n",
-    "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\"\n",
+    "#path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\one file\"\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\"\n",
     "\n",
     "# LINUX\n",
     "#path = \"/media/sf_Shared_Folder/TEST/one file\" # FEW TEST FILES\n",
@@ -214,6 +242,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -253,7 +282,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# ----------------------------------------- NLTK, WORDNET -------------------------------------------\n",
@@ -279,15 +310,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### Bag of Words, and all the rest"
+    "## Bag of Words, and all the rest"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# Algorithms\n",
@@ -355,15 +390,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "#### ----------------------------------------------------------------------------------------------------------------------------------------"
+    "#### --------------------------------------------------------- Compile cells above and below ----------------------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [],
@@ -404,15 +443,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "#### ----------------------------------------------------------------------------------------------------------------------------------------"
+    "#### ----------------------------------------------------- Run the MAIN BoW program below ------------------------------------------------------------------------"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\"\n",
@@ -446,7 +490,7 @@
     "            else:\n",
     "                pass\n",
     "\n",
-    "# --------------------------------------------------------------------------------\n",
+    "# ----------------------------------------- BAG OF WORDS ---------------------------------------\n",
     "            \n",
     "# --- processing Lemmatized files with Algos\n",
     "for root, subdirs, files in os.walk(path):\n",
@@ -489,7 +533,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Bag of Words v.2"
    ]
@@ -497,7 +544,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def BoW_v2(curFile,oFilePath,textCorpus):\n",
@@ -513,7 +562,7 @@
     "            oFile.write(final+\"\\n\")\n",
     "\n",
     "\n",
-    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\\Coursera Downloads PreProcessed\\mobile-robot\\02_mobile-robots\\01_week-2\"\n",
+    "path = r\"C:\\Users\\ani\\Desktop\\Course data Thesis\\PROCESSED\"\n",
     "\n",
     "# --- Collecting the POS files\n",
     "for root, subdirs, files in os.walk(path):\n",
@@ -549,7 +598,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### --------------------------------------------------------------------------------------------------------------------------------------\n",
     "### NOTES\n",
